Fix cockpit cost
(cherry picked from commit 51b9efca1ec6d3fe4ad0f79094ae24b90ca6a5f4)