@@ -5010,7 +5010,7 @@ public abstract class Mech extends Entity {
                 // Ammo with no matching weapons counts 0, unless it's a coolant
                 // pod
                 // because coolant pods have no matching weapon
-                if (key.equals(new Integer(AmmoType.T_COOLANT_POD).toString()
+                if (key.equals(Integer.valueOf(AmmoType.T_COOLANT_POD).toString()
                         + "1")) {
                     ammoBV += ammo.get(key);
                 }
@@ -5316,8 +5316,16 @@ public abstract class Mech extends Entity {
             cockpitCost = 1250000;
         } else if (getCockpitType() == Mech.COCKPIT_INDUSTRIAL) {
             cockpitCost = 100000;
+        } else if (getCockpitType() == Mech.COCKPIT_TRIPOD) {
+            cockpitCost = 400000;
         } else if (getCockpitType() == Mech.COCKPIT_QUADVEE) {
             cockpitCost = 375000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY) {
+            cockpitCost = 300000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY_INDUSTRIAL) {
+            cockpitCost = 200000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY_TRIPOD) {
+            cockpitCost = 500000;
         } else {
             cockpitCost = 200000;
         }
@@ -6579,7 +6587,7 @@ public abstract class Mech extends Entity {
         sb.append(newLine);
         sb.append(newLine);
 
-        Double tonnage = new Double(weight);
+        Double tonnage = Double.valueOf(weight);
         sb.append("Mass:").append(tonnage.intValue()).append(newLine);
         sb.append("Engine:");
         if(hasEngine()) {
@@ -8869,9 +8877,9 @@ public abstract class Mech extends Entity {
                         && crit.isHittable()
                         && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                         && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                        vCriticals.put(new Integer(loc),
+                        vCriticals.put(loc,
                                 new LinkedList<CriticalSlot>());
-                        vCriticals.get(new Integer(loc)).add(crit);
+                        vCriticals.get(loc).add(crit);
                         found = true;
                         break;
                     }
@@ -8884,9 +8892,9 @@ public abstract class Mech extends Entity {
                             && crit.isHittable()
                             && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                             && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                            vCriticals.put(new Integer(loc),
+                            vCriticals.put(loc,
                                     new LinkedList<CriticalSlot>());
-                            vCriticals.get(new Integer(loc)).add(crit);
+                            vCriticals.get(loc).add(crit);
                             break;
                         }
                     }
